# diffview

./: AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASING.md  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
Formula/: diffview.rb
src/: app.rs  git.rs  highlight.rs  main.rs  model.rs  tree.rs  ui.rs
