[package]
name = "diffview"
version = "0.3.0"
edition = "2021"
description = "IDE-style side-by-side git diff viewer for the terminal"
default-run = "diffview"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[profile.release]
lto = true
strip = true
